--- a/claseSQL/package.json
+++ b/claseSQL/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "claseSQL",
+  "name": "clasesql",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -15,6 +15,7 @@
     "express": "^4.18.1",
     "knex": "^2.1.0",
     "mysql2": "^2.3.3",
+    "socket.io": "^4.5.1",
     "sqlite3": "^5.0.8"
   },
   "devDependencies": {
