--- a/2ef/package.json
+++ b/2ef/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "express": "^4.18.1",
     "firebase-admin": "^11.0.0",
-    "mongodb": "^4.7.0"
+    "mongodb": "^4.7.0",
+    "mongoose": "^6.4.0"
   }
 }
