--- a/2ef/package.json
+++ b/2ef/package.json
@@ -6,7 +6,8 @@
   "main": "src/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ."
+    "start": "node src/main.js",
+    "start:dev": "nodemon main.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,7 @@
     "express": "^4.18.1",
     "firebase-admin": "^11.0.0",
     "mongodb": "^4.7.0",
-    "mongoose": "^6.4.0"
+    "mongoose": "^6.4.0",
+    "nodemon": "^2.0.18"
   }
 }
