--- a/2ef/package.json
+++ b/2ef/package.json
@@ -5,8 +5,7 @@
   "description": "",
   "main": "src/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/main.js",
+    "start": "node main.js",
     "start:dev": "nodemon main.js"
   },
   "keywords": [],
