--- a/claseSQL/package.json
+++ b/claseSQL/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "clasesql",
   "version": "1.0.0",
   "description": "",
@@ -12,9 +13,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^7.3.0",
     "express": "^4.18.1",
     "knex": "^2.1.0",
     "mysql2": "^2.3.3",
+    "normalizr": "^3.6.2",
     "socket.io": "^4.5.1",
     "sqlite3": "^5.0.8"
   },
