--- a/claseSession/package.json
+++ b/claseSession/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "connect-mongo": "^4.6.0",
     "express": "^4.18.1",
-    "express-session": "^1.17.3"
+    "express-session": "^1.17.3",
+    "mongodb": "^4.7.0"
   }
 }
